# Midnight-Coder

./: .bazelignore  .bazelrc  .codespellignore  .codespellrc  .gitattributes  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
.devcontainer/: Dockerfile  Dockerfile.secure  README.md  devcontainer.json  devcontainer.secure.json  init-firewall.sh  post-start.sh  post_install.py
.github/: CODEOWNERS  blob-size-allowlist.txt  dependabot.yaml  dotslash-argument-comment-lint-config.json  dotslash-config.json  dotslash-zsh-config.json  pull_request_template.md
codex-cli/: package.json
codex-rs/: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  clippy.toml  config.md  default.nix  deny.toml  rust-toolchain.toml
codex-rs/thread-manager-sample/: Cargo.toml  README.md
codex-rs/thread-manager-sample/src/: main.rs
docs/: CLA.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  execpolicy.md  getting-started.md  install.md  license.md  open-source-fund.md  sandbox.md  skills.md  slash_commands.md
patches/: abseil_windows_gnullvm_thread_identity.patch  aws-lc-sys_memcmp_check.patch  aws-lc-sys_windows_msvc_memcmp_probe.patch  aws-lc-sys_windows_msvc_prebuilt_nasm.patch  bzip2_windows_stack_args.patch  llvm_rusty_v8_custom_libcxx.patch  llvm_windows_arm64_powl.patch  windows-link.patch  (+22 more)
(+4765 files in other folders)
